CHATS_SIT/force-app/main/default/objects/T_PROVR_CBC__c.object
<CustomObject>
    <fields>
        <fullName>CDE_BGC_CHK_STATUS__c</fullName>
        <inlineHelpText>Not Cleared Status: Only select this status if the system should also close all Open Fiscal Agreements for this provider.</inlineHelpText>
        <label>Background Check Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00865</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_CBC_STATUS__c</fullName>
        <label>CBC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00724</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMAIL__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Provider ID</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>Provider Background Check</relationshipLabel>
        <relationshipName>Providers_CBC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NAM_FIRST__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_LAST__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_FAX__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE_CELL__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE_FAC__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Facility Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE_HOME__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TXT_ROLE__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHK_AllBackGroundChecks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTE_5yearFBIDueDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>5-year FBI Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_AllBackGroundChecks__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>All Background Checks Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_ProvFinFA_CareEff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fiscal Agreement/Reimbursement Effective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDE_ROLE__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Adult in Home</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Provider Background Check</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Providers Background Check</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cell_Phone_Must_be_10_Digits</fullName>
        <active>true</active>
        <errorConditionFormula>(NOT( ISBLANK(NBR_PHONE_CELL__c)) &amp;&amp;  LEN(NBR_PHONE_CELL__c)!=10)</errorConditionFormula>
        <errorDisplayField>NBR_PHONE_CELL__c</errorDisplayField>
        <errorMessage>Cell Phone must be 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Facility_Phone_must_of_10_digits</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( ISBLANK(NBR_PHONE_FAC__c)) &amp;&amp;  LEN(NBR_PHONE_FAC__c)!=10</errorConditionFormula>
        <errorDisplayField>NBR_PHONE_FAC__c</errorDisplayField>
        <errorMessage>Facility Phone must be 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fax_Number_must_be_10_digits</fullName>
        <active>true</active>
        <errorConditionFormula>(NOT( ISBLANK(NBR_FAX__c)) &amp;&amp;  LEN(NBR_FAX__c)!=10)</errorConditionFormula>
        <errorDisplayField>NBR_FAX__c</errorDisplayField>
        <errorMessage>Fax Number must be 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Home_Phone_must_be_10_digits</fullName>
        <active>true</active>
        <errorConditionFormula>(NOT( ISBLANK(NBR_PHONE_HOME__c)) &amp;&amp;  LEN(NBR_PHONE_HOME__c)!=10)</errorConditionFormula>
        <errorDisplayField>NBR_PHONE_HOME__c</errorDisplayField>
        <errorMessage>Home Phone must be 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AllBackGroundChecks_noFutureDate</fullName>
        <active>true</active>
        <errorConditionFormula>DTE_AllBackGroundChecks__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>DTE_AllBackGroundChecks__c</errorDisplayField>
        <errorMessage>Date entered should be less than or equal to today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FBI5yearDueDate_noPastDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 DTE_5yearFBIDueDate__c &lt; TODAY(),
 OR(
  ISCHANGED(DTE_5yearFBIDueDate__c),
  ISNEW()
 )
)</errorConditionFormula>
        <errorDisplayField>DTE_5yearFBIDueDate__c</errorDisplayField>
        <errorMessage>Date entered should be greater than or equal to today.</errorMessage>
    </validationRules>
    <!--Commented as part of CCCAP-10798-->
    <!--validationRules>
        <fullName>ProvFinFA_CareEff_noFutureDate</fullName>
        <active>false</active>
        <errorConditionFormula>DTE_ProvFinFA_CareEff__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>DTE_ProvFinFA_CareEff__c</errorDisplayField>
        <errorMessage>Date entered should be less than or equal to today.</errorMessage>
    </validationRules-->
</CustomObject>