CHATS_SIT/force-app/main/default/objects/T_PROVR_CBC__c/validationRules/AllBackGroundChecks_noFutureDate.validationRule-meta.xml
<ValidationRule>
    <fullName>AllBackGroundChecks_noFutureDate</fullName>
    <active>true</active>
    <errorConditionFormula>DTE_AllBackGroundChecks__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>DTE_AllBackGroundChecks__c</errorDisplayField>
    <errorMessage>Date entered should be less than or equal to today.</errorMessage>
</ValidationRule>