CHATS_SIT/force-app/main/default/objects/T_PROVR_CBC__c/validationRules/Cell_Phone_Must_be_10_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Cell_Phone_Must_be_10_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>(NOT( ISBLANK(NBR_PHONE_CELL__c)) &amp;&amp;  LEN(NBR_PHONE_CELL__c)!=10)</errorConditionFormula>
    <errorDisplayField>NBR_PHONE_CELL__c</errorDisplayField>
    <errorMessage>Cell Phone must be 10 digits</errorMessage>
</ValidationRule>