CHATS_SIT/force-app/main/default/objects/T_PROVR_CBC__c/validationRules/Fax_Number_must_be_10_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Fax_Number_must_be_10_digits</fullName>
    <active>true</active>
    <errorConditionFormula>(NOT( ISBLANK(NBR_FAX__c)) &amp;&amp;  LEN(NBR_FAX__c)!=10)</errorConditionFormula>
    <errorDisplayField>NBR_FAX__c</errorDisplayField>
    <errorMessage>Fax Number must be 10 digits</errorMessage>
</ValidationRule>