CHATS_SIT/force-app/main/default/objects/T_PROVR_CBC__c/validationRules/FBI5yearDueDate_noPastDate.validationRule-meta.xml
<ValidationRule>
    <fullName>FBI5yearDueDate_noPastDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 DTE_5yearFBIDueDate__c &lt; TODAY(),
 OR(
  ISCHANGED(DTE_5yearFBIDueDate__c),
  ISNEW()
 )
)</errorConditionFormula>
    <errorDisplayField>DTE_5yearFBIDueDate__c</errorDisplayField>
    <errorMessage>Date entered should be greater than or equal to today.</errorMessage>
</ValidationRule>